<resources>
    <string name="app_name">OnlineShopping</string>
    <string name="registration_text">Here\'s\nyour first\nstep with\nus!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="register_login">Already have an account?</string>
    <string name="login_text">Already\nhave an\nAccount?</string>
    <string name="login">LOGIN</string>
    <string name="login_register">New user? Register Now</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="home">Home</string>
    <string name="account_information">Account Information</string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="cart_empty">No items in your cart</string>
    <string name="buy_more">Add Items</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aman">\@aman</string>
    <string name="back_to_home">Back to\nHome</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="dob">D.O.B</string>
</resources>