<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/teal_200">

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/abel"
        android:text="@string/registration_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/registration_form_border"
        android:layout_below="@id/registrationText">

        <EditText
            android:inputType="text"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/name"
            android:importantForAutofill="no" />

        <EditText
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerName"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/email"
            android:importantForAutofill="no" />

        <EditText
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/registerPassword"
            android:layout_below="@id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/password"
            android:importantForAutofill="no" />

        <EditText
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_below="@id/registerPassword"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:backgroundTint="@color/teal_200"
            android:importantForAutofill="no" />

        <Button
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerConfirmPassword"
            android:text="@string/register"
            android:background="@drawable/button_border"/>

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_below="@id/registerBtn"
            android:id="@+id/registerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"/>

    </RelativeLayout>

</RelativeLayout>