<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/abel"
        android:textSize="50sp"/>

    <RelativeLayout
        android:layout_marginStart="400dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-20dp"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/login_border"/>

    <EditText
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/teal_200"
        android:id="@+id/loginEmail"
        android:textSize="18sp"
        android:layout_below="@id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no" />

    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/teal_200"
        android:textSize="18sp"
        android:id="@+id/loginPassword"
        android:layout_below="@id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <Button
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_border"
        android:layout_marginTop="25dp"
        android:id="@+id/loginBtn"
        android:layout_below="@id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/login_register"
        android:id="@+id/loginRegister"
        android:layout_below="@id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>