<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_marginTop="-15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/ll1"
            android:background="@drawable/profile_background"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_marginTop="-20dp"
                android:id="@+id/backIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"
                android:tint="#FFFFFF"
                tools:ignore="UseAppTint" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher_round"/>

                <TextView
                    android:id="@+id/profileName"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/profileEmail"
                    android:textSize="16sp"
                    android:layout_marginBottom="30dp"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="-45dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/backBtn"
            android:gravity="center_vertical|end"
            android:background="@drawable/back_to_home_border"
            android:layout_below="@id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/back_button_border"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"
                android:tint="#676565"
                tools:ignore="UseAppTint" />

            <TextView
                android:textSize="17sp"
                android:layout_marginEnd="90dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_home"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/acc"
            android:layout_below="@id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/account_information"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/editProfile"
                android:layout_marginTop="-2dp"
                android:text="Edit"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:layout_marginStart="110dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_menu_account"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/name"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/profileUsername"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_phone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/mobile"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginStart="5dp"
                        android:text="+91-1234567890"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/profileUseremail"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_address"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginStart="5dp"
                        android:text="INDIA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_dob"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/dob"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginStart="5dp"
                        android:text="01-01-2000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>